--- a/.github/workflows/upload-package-creation-images.yml
+++ b/.github/workflows/upload-package-creation-images.yml
@@ -33,15 +33,15 @@ jobs:
         run:
           if [ ! -z ${{ github.head_ref }} ]; then echo "TAG=${{ github.head_ref }}" >> $GITHUB_ENV; else echo "TAG=$(cat $GITHUB_WORKSPACE/VERSION)" >> $GITHUB_ENV ; fi
 
-      - name: Build and push image ${{ matrix.image.CONTAINER_NAME }}_${{github.ref_name}} to Github Container Registry
+      - name: Build and push image ${{ matrix.image.CONTAINER_NAME }} to Github Container Registry
         if: ${{ ( matrix.image.ARCHITECTURE == 'x86_64') || ( matrix.image.ARCHITECTURE == 'i386' )}}
         run:
           bash $GITHUB_WORKSPACE/.github/actions/common-tools/build_and_push_image_to_ghcr.sh ${{ secrets.GITHUB_TOKEN }} ${{ github.actor}} ${{matrix.image.CONTAINER_NAME}} ${{ matrix.image.DOCKERFILE_PATH }} $TAG
 
 
-      - uses: uraimo/run-on-arch-action@v2.5.0
+      - name: Build and push image ${{ matrix.image.CONTAINER_NAME }} to Github Container Registry
+        uses: uraimo/run-on-arch-action@v2.5.0
         if: ${{ ( matrix.image.ARCHITECTURE != 'x86_64') && ( matrix.image.ARCHITECTURE != 'i386' )}}
-        name: Build and push image ${{matrix.image.CONTAINER_NAME}} to Github Container Registry
         with:
           arch: ${{ matrix.image.ARCHITECTURE }}
           distro: ${{ matrix.image.DISTRO }}
