--- a/.github/workflows/upload-rpm-images.yml
+++ b/.github/workflows/upload-rpm-images.yml
@@ -2,7 +2,7 @@ name: Upload package creation Docker images
 on:
   pull_request:
     paths:
-      - '.github/workflows/upload-package-creation-images.yml'
+      - '.github/workflows/upload-rpm-images.yml'
       - 'rpms/CentOS/*'
       - 'rpms/build.sh'
   push:
@@ -19,21 +19,19 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        image: [ {CONTAINER_NAME: rpm_builder_x86, DOCKERFILE_PATH: rpms/CentOS/6/x86_64, ARCHITECTURE: x86_64}, {CONTAINER_NAME: rpm_builder_i386, DOCKERFILE_PATH: rpms/CentOS/6/i386, ARCHITECTURE: i386}]
+        image: [ {CONTAINER_NAME: rpm_builder_x86, DOCKERFILE_PATH: rpms/CentOS/6/x86_64}, {CONTAINER_NAME: rpm_builder_i386, DOCKERFILE_PATH: rpms/CentOS/6/i386}]
       fail-fast: false
     steps:
       - uses: actions/checkout@v3
 
       - name: Copy build.sh to Dockerfile path
-        if: ${{ ( matrix.image.ARCHITECTURE == 'x86_64') || ( matrix.image.ARCHITECTURE == 'i386' )}}
         run:
           cp $GITHUB_WORKSPACE/rpms/build.sh $GITHUB_WORKSPACE/${{ matrix.image.DOCKERFILE_PATH }}
 
       - name: Set tag as version
-        run:
-          if [ "${{ github.event_name }}" == "pull_request" ]; then echo "TAG=${{ github.head_ref }}" >> $GITHUB_ENV; else echo "TAG=$(cat $GITHUB_WORKSPACE/VERSION)" >> $GITHUB_ENV ; fi
+        run: 
+          if [ "${{ github.event_name }}" == "pull_request" ]; then echo "TAG=${{ github.head_ref }}" >> $GITHUB_ENV; else echo "TAG=$(sed 's/\([0-9]*\.[0-9]*\)\.[0-9]*/\1/' $GITHUB_WORKSPACE/VERSION)" >> $GITHUB_ENV; fi
 
-      - name: Build and push image ${{ matrix.image.CONTAINER_NAME }} to Github Container Registry
-        if: ${{ ( matrix.image.ARCHITECTURE == 'x86_64') || ( matrix.image.ARCHITECTURE == 'i386' )}}
+      - name: Build and push image ${{ matrix.image.CONTAINER_NAME }} with tag $TAG to Github Container Registry
         run:
           bash $GITHUB_WORKSPACE/.github/actions/common-tools/build_and_push_image_to_ghcr.sh ${{ secrets.GITHUB_TOKEN }} ${{ github.actor}} ${{matrix.image.CONTAINER_NAME}} ${{ matrix.image.DOCKERFILE_PATH }} $TAG
