Add `--force-yes` to the Dockerfile for deb package creation to be able to test it
Signed-off-by: Miguel Verdaguer Velázquez <verdx@riseup.net>

--- a/debs/Debian/i386/Dockerfile
+++ b/debs/Debian/i386/Dockerfile
@@ -14,7 +14,7 @@ RUN echo "deb http://archive.debian.org/debian/ wheezy contrib main non-free" > 
     libssl1.0.0=1.0.1e-2+deb7u20 gawk libsigsegv2 procps
 
 # Add Debian's source repository
-RUN apt-get update && apt-get build-dep python3.2 -y
+RUN apt-get update && apt-get build-dep python3.2 -y --force-yes
 RUN sed -i "s;/\* To add :#define SO_REUSEPORT 15 \*/;#define SO_REUSEPORT 15;g" /usr/include/asm-generic/socket.h
 
 RUN curl -OL http://packages.wazuh.com/utils/gcc/gcc-9.4.0.tar.gz && \
