Call package builder from image uploader if run from a pr
Signed-off-by: Miguel Verdaguer Velázquez <verdx@riseup.net>

--- a/.github/workflows/build-rpm-packages.yml
+++ b/.github/workflows/build-rpm-packages.yml
@@ -4,10 +4,8 @@ on:
     paths:
       - 'rpms/SPECS/*'
       - 'rpms/generate_rpm_package.sh'
-      - 'rpms/CentOS/*'
-      - 'rpms/build.sh'
-      - '.github/workflows/upload-rpm-images.yml'
   workflow_dispatch:
+  workflow_call:
 
 jobs:
   Wazuh-agent-rpm-package-builds:
