--- a/.github/workflows/build-deb-packages.yml
+++ b/.github/workflows/build-deb-packages.yml
@@ -4,10 +4,8 @@ on:
     paths:
       - 'debs/SPECS/*'
       - 'debs/generate_debian_package.sh'
-      - 'debs/Debian/*'
-      - 'debs/build.sh'
-      - '.github/workflows/upload-deb-images.yml'
   workflow_dispatch:
+  workflow_call:
 
 jobs:
   Wazuh-agent-deb-package-builds:
