--- a/.github/workflows/upload-deb-images.yml
+++ b/.github/workflows/upload-deb-images.yml
@@ -35,7 +35,7 @@ jobs:
         run:
           bash $GITHUB_WORKSPACE/.github/actions/common-tools/build_and_push_image_to_ghcr.sh ${{ secrets.GITHUB_TOKEN }} ${{ github.actor}} ${{matrix.image.CONTAINER_NAME}} ${{ matrix.image.DOCKERFILE_PATH }} ${{ env.TAG }}
 
-  Call create packages workflow:
+  Call-build-packages-workflow:
     if: github.event_name == 'pull_request'
     uses: ./.github/workflows/build-deb-packages.yml
     secrets: inherit
