--- a/.github/workflows/upload-rpm-images.yml
+++ b/.github/workflows/upload-rpm-images.yml
@@ -36,6 +36,7 @@ jobs:
           bash $GITHUB_WORKSPACE/.github/actions/common-tools/build_and_push_image_to_ghcr.sh ${{ secrets.GITHUB_TOKEN }} ${{ github.actor}} ${{matrix.image.CONTAINER_NAME}} ${{ matrix.image.DOCKERFILE_PATH }} ${{ env.TAG }}
 
   Call-build-packages-workflow:
+    needs: Upload-rpm-package-building-images
     if: github.event_name == 'pull_request'
     uses: ./.github/workflows/build-rpm-packages.yml
     secrets: inherit
