Remove the test for manager i386, as it is not supported
Signed-off-by: Miguel Verdaguer Velázquez <verdx@riseup.net>

--- a/.github/workflows/build-deb-packages.yml
+++ b/.github/workflows/build-deb-packages.yml
@@ -14,6 +14,9 @@ jobs:
       matrix:
         TYPE: [agent, manager]
         ARCHITECTURE : [amd64, i386]
+        exclude:
+          - TYPE: manager
+            ARCHITECTURE: i386
       fail-fast: false
 
     steps:
