--- a/.github/workflows/build-rpm-packages.yml
+++ b/.github/workflows/build-rpm-packages.yml
@@ -14,6 +14,9 @@ jobs:
       matrix:
         TYPE: [agent, manager]
         ARCHITECTURE : [x86_64, i386]
+        exclude:
+          - TYPE: manager
+            ARCHITECTURE: i386
       fail-fast: false
 
     steps:
